# DailyCodingProblems

./: CMakeLists.txt  Dockerfile  build.sh
.devcontainer/: devcontainer.json
problems/: problem_670_medium.md  problem_674_easy.md  problem_678_easy.md
solutions/: solution_670.hpp  solution_674.hpp  solution_678.hpp
tests/: CMakeLists.txt  test_670.cpp  test_674.cpp  test_678.cpp
